--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+numpy==1.15.1
 openai==0.22.0
 openpyxl==3.0.10
-pandas==1.4.3
+pandas==1.1.5
 pandas-stubs==1.4.3.220724
 python-dateutil==2.8.2
 pytz==2022.1
