--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,20 @@
-certifi==2022.6.15
-charset-normalizer==2.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==22.2.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
 click==8.1.3
-et-xmlfile==1.1.0
-Flask==2.1.3
-gunicorn==20.1.0
-idna==3.3
-importlib-metadata==4.12.0
+Flask==2.2.2
+frozenlist==1.3.3
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
-numpy==1.21.6
-openai==0.21.0
-openpyxl==3.0.10
-pandas==1.2.0
-pandas-stubs==1.2.0.62
-python-dateutil==2.8.2
-pytz==2022.1
-requests==2.28.1
-six==1.16.0
-tqdm==4.64.0
-types-pytz==2022.1.2
-urllib3==1.26.11
-Werkzeug==2.2.1
-zipp==3.8.1
+MarkupSafe==2.1.2
+multidict==6.0.4
+openai==0.26.5
+requests==2.28.2
+tqdm==4.64.1
+urllib3==1.26.14
+Werkzeug==2.2.3
+yarl==1.8.2
