--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 multidict==6.0.4
-openai==0.26.5
+openai==0.27.2
+python-dotenv==0.21.0
 requests==2.28.2
 tqdm==4.64.1
 urllib3==1.26.14
